RESOLVED FIXED164171
UIScriptControllerIOS.mm should not be soft-linking UIKit
https://bugs.webkit.org/show_bug.cgi?id=164171
Summary UIScriptControllerIOS.mm should not be soft-linking UIKit
Wenson Hsieh
Reported 2016-10-28 19:39:41 PDT
UIScriptControllerIOS.mm should not be soft-linking UIKit
Attachments
Patch (3.45 KB, patch)
2016-10-28 20:04 PDT, Wenson Hsieh
no flags
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (1.19 MB, application/zip)
2016-10-28 21:07 PDT, Build Bot
no flags
Wenson Hsieh
Comment 1 2016-10-28 20:04:41 PDT
Build Bot
Comment 2 2016-10-28 21:07:57 PDT
Comment on attachment 293268 [details] Patch Attachment 293268 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/2397094 New failing tests: svg/wicd/test-rightsizing-b.xhtml
Build Bot
Comment 3 2016-10-28 21:07:59 PDT
Created attachment 293272 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 4 2016-10-29 09:35:47 PDT
Comment on attachment 293268 [details] Patch Clearing flags on attachment: 293268 Committed r208106: <http://trac.webkit.org/changeset/208106>
WebKit Commit Bot
Comment 5 2016-10-29 09:35:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.