UIScriptControllerIOS.mm should not be soft-linking UIKit https://bugs.webkit.org/show_bug.cgi?id=164171

Reviewed by Darin Adler.

Follow-up to r208090. Instead of soft-linking, we can simply grab UIKeyboardPredictionView by name instead.

* WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptController::waitForTextPredictionsViewAndSelectCandidateAtIndex):


Canonical link: https://commits.webkit.org/181888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208106 268f45cc-cd09-0410-ab3c-d52691b4dbfc